compiler/testData/diagnostics/tests/java8Overrides/hidingMethodOfAny.fir.kt
interface IA {
    <!METHOD_OF_ANY_IMPLEMENTED_IN_INTERFACE!>fun <!VIRTUAL_MEMBER_HIDDEN!>toString<!>(): String = "IB"<!>

    override fun equals(other: Any?): Boolean
}
